Prevent line breaks on multiwords

--- a/src/stylesheets/MainNav.css
+++ b/src/stylesheets/MainNav.css
@@ -4,6 +4,7 @@
   align-items: center;
   height: 2.5rem;
   color: var(--nav-font-color);
+  white-space: nowrap;
 }
 
 .main-nav a {
